--- a/assets/styles/frontend/common/components/list/categories.less
+++ b/assets/styles/frontend/common/components/list/categories.less
@@ -4,7 +4,7 @@
 @list-categories-item-border-size: 1px;
 
 .list-categories-wrap {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
         
     border: 3px solid @color-border;
     border-radius: @radius;
@@ -50,13 +50,13 @@
         border-right: @list-categories-item-border-size solid @color-border;
 
         @media @query-lg {
-            width: calc(~"@{calc-base} / @{list-categories-columns-count}");
+            width: calc(~"100% / @{list-categories-columns-count}");
             margin-right: 0;
         }
 
         .list-categories--four-on-row & {
             @media @query-vl {
-                width: calc(~"@{calc-base} / 4");
+                width: 100% / 4;
             }
         }
 
