--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -240,7 +240,7 @@
         {% for productView in productViews %}
             <div class="{{ listCssClass }}__item">
                 <a class="{{ listCssClass }}__item__image dont-print" href="{{ productView.action.detailUrl }}">
-                    {{ image(productView.image, { size: 'listDetailArticle', alt: productView.name, lazy: true }) }}
+                    {{ image(productView.image, { size: 'mediumThumbnail', alt: productView.name, lazy: true }) }}
                 </a>
 
                 <div class="{{ listCssClass }}__item__info">
