design: add new images

--- a/templates/Front/Content/AboutUs/info.html.twig
+++ b/templates/Front/Content/AboutUs/info.html.twig
@@ -60,11 +60,11 @@
                     <div class="box-contact__store__left">
                         <div class="box-contact__store__gallery">
                             <div class="box-contact__store__gallery__main">
-                                <img src="http://placeimg.com/468/323/any" alt="{{ 'store1'|trans }}">
+                                <img src="{{ asset('public/frontend/images/contact1.png') }}" alt="{{ 'store1'|trans }}">
                             </div>
                             <div class="box-contact__store__gallery__alt">
-                                <img src="http://placeimg.com/204/155/any" alt="{{ 'store2'|trans }}">
-                                <img src="http://placeimg.com/204/155/any" alt="{{ 'store3'|trans }}">
+                                <img src="{{ asset('public/frontend/images/contact2.png') }}" alt="{{ 'store2'|trans }}">
+                                <img src="{{ asset('public/frontend/images/contact3.png') }}" alt="{{ 'store3'|trans }}">
                             </div>
                         </div>
                     </div>
