--- a/templates/Front/Content/Order/transportAndPaymentBox.html.twig
+++ b/templates/Front/Content/Order/transportAndPaymentBox.html.twig
@@ -23,7 +23,9 @@
                             class: 'css-radio js-order-transport-input',
                             'data-id': choice.data.id,
                             'data-transport-pickup': choice.data.pickupPlace,
-                            'data-choose-store': choice.data.chooseStore
+                            'data-choose-store': choice.data.chooseStore,
+                            'data-type': choice.data.transportType,
+                            'data-language': getDomain().locale
                         } }) }}
                         <span class="css-radio__image"></span>
                     </span>
@@ -47,9 +49,9 @@
                             {% set checked = child.vars.checked == true %}
                             {% set pickupPlaceName = '' %}
                             {% if pickupPlace != null and checked %}
-                                {% set pickupPlaceName = pickupPlace.getName %}
+                                {% set pickupPlaceName = pickupPlace.name %}
                             {% elseif store != null and checked %}
-                                {% set pickupPlaceName = store.getName %}
+                                {% set pickupPlaceName = store.name %}
                             {% endif %}
                             <span class="js-pickup-place-detail js-pickup-place-tooltip js-pickup-place-detail-{{ choice.data.id }}"
                                 title="{{ pickupPlaceName }}">
@@ -61,6 +63,8 @@
                                     data-id="{{ choice.data.id }}"
                                     class="box-chooser__item__pickup-button js-pickup-place-change-button link-style btn-no-style{% if pickupPlaceName is same as ('') or checked == false %} display-none{% endif %}"
                                     data-form-field-class="{% if choice.data.isPickupPlace() %}js-pickup-place-input{% elseif choice.data.isChooseStore() %}js-store-input{% endif %}"
+                                    data-type="{{ choice.data.transportType }}"
+                                    data-language="{{ getDomain().locale }}"
                                 >
                                     {{ 'Vybrat'|trans }}
                                 </button>
