--- a/assets/styles/frontend/common/components/list/cart-preview.less
+++ b/assets/styles/frontend/common/components/list/cart-preview.less
@@ -31,10 +31,12 @@
         border-bottom: 1px solid @color-border;
 
         &:last-child {
-            margin-bottom: 0;
-            padding-bottom: 0;
-
             border-bottom: 0;
+
+            .list-cart-preview--without-opener & {
+                margin-bottom: 0;
+                padding-bottom: 0;
+            }
         }
 
         &--sets {
