--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -69,6 +69,7 @@
 @import "components/in/free-transport.less";
 @import "components/in/icon.less";
 @import "components/in/message.less";
+@import "components/in/opener.less";
 @import "components/in/overlay.less";
 @import "components/in/paging.less";
 @import "components/in/place.less";
