--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -1,6 +1,6 @@
 {% macro productPreviewItem(product, quantity, price, saleItem = false, canShowAvailability = true) %}
     {% import 'Front/Content/Product/productAvailabilityMacro.html.twig' as availability %}
-    <li class="list-cart-preview__item{% if product.isPohodaProductTypeSet or product.isSupplierSet %} list-cart-preview__item--sets{% endif %}">
+    <li class="list-cart-preview__item{% if product.isPohodaProductTypeSet or product.isSupplierSet %} list-cart-preview__item--sets{% endif %} js-opener-item">
         {% if product.isPohodaProductTypeSet %}
             <div class="list-cart-preview__item__wrap-image">
                 {% for productSet in product.productSets %}
@@ -63,26 +63,48 @@
                         <h2 class="in-title in-title--small in-title--dark">
                             {{ 'Vaše objednávka'|trans }}
                         </h2>
-                        <ul id="js-order-preview-cart" class="list-cart-preview">
-                            {% for quantifiedProductKey, quantifiedProduct in orderPreview.quantifiedProducts %}
-                                {% set quantifiedProductPrice = orderPreview.quantifiedItemsPrices[quantifiedProductKey] %}
-                                {{ _self.productPreviewItem(quantifiedProduct.product, quantifiedProduct.quantity, quantifiedProductPrice.totalPrice.priceWithVat, quantifiedProduct.isSaleItem) }}
-                            {% endfor %}
-                        </ul>
-                        <ul class="list-cart-preview">
-                            {% set orderGiftProduct = orderPreview.orderGiftProduct %}
-                            {% if orderGiftProduct is not null or orderPreview.gifts is not empty %}
-                                <li class="list-cart-preview__title">{{ 'Dárek k vaší objednávce:'|trans }}</li>
-                            {% endif %}
-                            {% if orderGiftProduct is not null %}
-                                {{ _self.productPreviewItem(orderGiftProduct, 1, orderGiftProductPrice, false, false) }}
-                            {% endif %}
-                            {% if orderPreview.gifts is not empty %}
-                                {% for gift in orderPreview.gifts %}
-                                    {{ _self.productPreviewItem(gift.product, gift.quantity, gift.totalPrice, false, false) }}
-                                {% endfor %}
-                            {% endif %}
-                        </ul>
+                        <div class="in-opener js-opener-container">
+                            <div class="in-opener__wrap js-opener-wrap" data-opened-items="3">
+                                <ul id="js-order-preview-cart" class="list-cart-preview{% if orderPreview.quantifiedProducts|length <= 3 %} list-cart-preview--without-opener{% endif %}">
+                                    {% for quantifiedProductKey, quantifiedProduct in orderPreview.quantifiedProducts %}
+                                        {% set quantifiedProductPrice = orderPreview.quantifiedItemsPrices[quantifiedProductKey] %}
+                                        {{ _self.productPreviewItem(quantifiedProduct.product, quantifiedProduct.quantity, quantifiedProductPrice.totalPrice.priceWithVat, quantifiedProduct.isSaleItem) }}
+                                    {% endfor %}
+                                </ul>
+                                <div class="in-opener__gradient js-opener-gradient"></div>
+                            </div>
+                            <div class="in-opener__button">
+                                <span class="in-opener__button__btn js-opener-show-more-button">
+                                    <span class="more">{{ 'Zobrazit všechny položky'|trans }}</span>
+                                    <span class="less">{{ 'Skrýt položky'|trans }}</span>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="in-opener js-opener-container">
+                            <div class="in-opener__wrap js-opener-wrap" data-opened-items="3">
+                                <ul class="list-cart-preview{% if orderPreview.gifts|length <= 3 %} list-cart-preview--without-opener{% endif %}">
+                                    {% set orderGiftProduct = orderPreview.orderGiftProduct %}
+                                    {% if orderGiftProduct is not null or orderPreview.gifts is not empty %}
+                                        <li class="list-cart-preview__title">{{ 'Dárek k vaší objednávce:'|trans }}</li>
+                                    {% endif %}
+                                    {% if orderGiftProduct is not null %}
+                                        {{ _self.productPreviewItem(orderGiftProduct, 1, orderGiftProductPrice, false, false) }}
+                                    {% endif %}
+                                    {% if orderPreview.gifts is not empty %}
+                                        {% for gift in orderPreview.gifts %}
+                                            {{ _self.productPreviewItem(gift.product, gift.quantity, gift.totalPrice, false, false) }}
+                                        {% endfor %}
+                                    {% endif %}
+                                </ul>
+                                <div class="in-opener__gradient js-opener-gradient"></div>
+                            </div>
+                            <div class="in-opener__button">
+                                <span class="in-opener__button__btn js-opener-show-more-button">
+                                    <span class="more">{{ 'Zobrazit všechny položky'|trans }}</span>
+                                    <span class="less">{{ 'Skrýt položky'|trans }}</span>
+                                </span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             {% endif %}
