--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -73,11 +73,12 @@
                                 </ul>
                                 <div class="in-opener__gradient js-opener-gradient"></div>
                             </div>
-                            <div class="in-opener__button">
-                                <span class="in-opener__button__btn js-opener-show-more-button">
+                            <div class="in-opener__button js-opener-show-more-button">
+                                <span class="in-opener__button__text">
                                     <span class="more">{{ 'Zobrazit všechny položky'|trans }}</span>
                                     <span class="less">{{ 'Skrýt položky'|trans }}</span>
                                 </span>
+                                 <i class="svg svg-triangle"></i>
                             </div>
                         </div>
                         <div class="in-opener js-opener-container">
@@ -98,11 +99,12 @@
                                 </ul>
                                 <div class="in-opener__gradient js-opener-gradient"></div>
                             </div>
-                            <div class="in-opener__button">
-                                <span class="in-opener__button__btn js-opener-show-more-button">
+                            <div class="in-opener__button js-opener-show-more-button">
+                                <span class="in-opener__button__text">
                                     <span class="more">{{ 'Zobrazit všechny položky'|trans }}</span>
                                     <span class="less">{{ 'Skrýt položky'|trans }}</span>
                                 </span>
+                                 <i class="svg svg-triangle"></i>
                             </div>
                         </div>
                     </div>
