design: fix template of article detail

--- a/assets/styles/frontend/common/components/list/variants.less
+++ b/assets/styles/frontend/common/components/list/variants.less
@@ -178,7 +178,7 @@
             }
 
             &__item {
-                display: inline;
+                display: inline-block;
                 line-height: @list-variants-item-prices-size;
 
                 font-size: @list-variants-item-prices-size;
