--- a/templates/Front/Inline/Newsletter/subscription.html.twig
+++ b/templates/Front/Inline/Newsletter/subscription.html.twig
@@ -10,7 +10,7 @@
             <div class="footer-newsletter__form__input">
                 <div class="form-line">
                     <div class="form-line__input">
-                        {{ form_widget(form.email, { attr: {placeholder: 'Váš e-mail'|trans,} }) }}
+                        {{ form_widget(form.email) }}
                         <label class="input-label required">E-mail</label>
                     </div>
                     <div class="form-line__error">
