--- a/templates/Front/Layout/header.html.twig
+++ b/templates/Front/Layout/header.html.twig
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="header__right__search">
-                    <div class="box-dropdown box-dropdown--search box-dropdown--without-arrow box-dropdown--small-padding js-hover-intent js-search-opener">
+                    <div class="box-dropdown box-dropdown--search box-dropdown--without-arrow box-dropdown--small-padding  ">
                         <div class="box-dropdown__select js-responsive-toggle"
                             data-element="js-header-search"
                             data-hide-on-click-out="true"
