--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -242,17 +242,18 @@
                 <a class="{{ listCssClass }}__item__image dont-print" href="{{ productView.action.detailUrl }}">
                     {{ image(productView.image, { size: 'mediumThumbnail', alt: productView.name, lazy: true }) }}
                 </a>
+                
+                <{{ productHeadingTagName|default('h2') }} class="{{ listCssClass }}__item__title" href="{{ productView.action.detailUrl }}">
+                    {{ productView.name|striptags|raw }}
+                <{{ '/' ~ productHeadingTagName|default('h2') }}>
 
                 <div class="{{ listCssClass }}__item__info">
-                    <div class="{{ listCssClass }}__item__info__content">
-                        <div class="{{ listCssClass }}__item__info__content__left">
-                            <{{ productHeadingTagName|default('h2') }} class="{{ listCssClass }}__item__info__title" href="{{ productView.action.detailUrl }}">
-                                {{ productView.name|striptags|raw }}
-                            <{{ '/' ~ productHeadingTagName|default('h2') }}>
-                        </div>
+                    <div class="{{ listCssClass }}__item__info__left">
+                        {% include 'Front/Content/Product/productViewAvailability.html.twig' %}
+                    </div>
 
-                        <div class="{{ listCssClass }}__item__info__content__right">
-                            {% set productSellingPrice = productView.sellingPrice %}
+                    <div class="{{ listCssClass }}__item__info__right">
+                        {% set productSellingPrice = productView.sellingPrice %}
 
                         {% if productSellingPrice is not null %}
                             <div class="{{ listCssClass }}__item__info__price">
@@ -269,17 +270,16 @@
                                         </div>
                                     {% endif %}
                                 </div>
-                            {% endif %}
+                            </div>
+                        {% endif %}
 
-                            {% include 'Front/Content/Product/productViewAvailability.html.twig' %}
+                        <div class="{{ listCssClass }}__item__add-button">
+                            {{ render(controller('App\\Controller\\Front\\CartController:productActionAction', {
+                                listedProductView: productView,
+                                type: 'detailArticle',
+                                showAmountInput: false
+                            } )) }}
                         </div>
-                    </div>
-                    <div class="{{ listCssClass }}__item__add-button">
-                        {{ render(controller('App\\Controller\\Front\\CartController:productActionAction', {
-                            listedProductView: productView,
-                            type: 'detailArticle',
-                            showAmountInput: false
-                        } )) }}
                     </div>
                 </div>
             </div>
