--- a/templates/Front/Inline/Cart/productAction.html.twig
+++ b/templates/Front/Inline/Cart/productAction.html.twig
@@ -2,9 +2,15 @@
 {% set productActionView = productView.action %}
 
 {% if productActionView.mainVariant %}
-    <a href="{{ productActionView.detailUrl }}" class="in-add-to-cart-variant btn btn--big btn--success {{ buttonSizeClass }}">
-        {{- 'Choose variant'|trans -}}
-    </a>
+    {% if type == "detailArticle" %}
+        <a href="{{ productActionView.detailUrl }}" class="btn btn--success {{ buttonSizeClass }}">
+            {{- 'Choose variant'|trans -}}
+        </a>
+    {% else %}
+        <a href="{{ productActionView.detailUrl }}" class="in-add-to-cart-variant btn btn--big btn--success {{ buttonSizeClass }}">
+            {{- 'Choose variant'|trans -}}
+        </a>
+    {% endif %}
 {% else %}
     {% set outOfStock = productView.stockQuantity <= 0 or productActionView.sellingDenied %}
     {% set cssClass = '' %}
@@ -12,7 +18,8 @@
         {% set cssClass = 'btn--disabled ' %}
     {% endif %}
     {{ form_start(form, {attr: {class: 'js-add-product dont-print', 'data-ajax-url': url('front_cart_add_product_ajax'), 'multipleForm': true}}) }}
-    <div class="in-add-to-cart in-add-to-cart--small">
+    
+    {% if type == "detailArticle" %}
         <div class="in-add-to-cart__spinbox js-spinbox-parent{% if not showAmountInput %} display-none{% endif %}">
             <span class="form-input-spinbox js-spinbox">
                 {{ form_widget(form.quantity, { attr: {
@@ -34,7 +41,32 @@
             {% set hardDisabled = 1 %}
         {% endif %}
 
-        {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ 'in-add-to-cart__button btn-no-style', disabled: outOfStock, 'data-hard-disabled': hardDisabled }}) }}
-    </div>
+        {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ 'btn--success', disabled: outOfStock, 'data-hard-disabled': hardDisabled }}) }}
+    {% else %}
+        <div class="in-add-to-cart in-add-to-cart--small">
+            <div class="in-add-to-cart__spinbox js-spinbox-parent{% if not showAmountInput %} display-none{% endif %}">
+                <span class="form-input-spinbox js-spinbox">
+                    {{ form_widget(form.quantity, { attr: {
+                        class: 'form-input-spinbox__input input-no-style js-spinbox-input',
+                        'data-spinbox-min': productActionView.minimumAmount,
+                        'data-spinbox-step': productActionView.amountMultiplier,
+                        'data-spinbox-max': productView.stockQuantity,
+                        'disabled': outOfStock ? 'disabled' : false
+                    } }) }}
+                    <button type="button" class="{{ cssClass }}btn-no-style form-input-spinbox__btn {% if not outOfStock %}js-spinbox-plus{% endif %}"><i class="svg svg-plus"></i></button>
+                    <button type="button" class="{{ cssClass }}btn-no-style form-input-spinbox__btn form-input-spinbox__btn--minus {% if not outOfStock %}js-spinbox-minus{% endif %}"><i class="svg svg-minus"></i></button>
+                </span>
+            </div>
+
+            {% set cssClass = '' %}
+            {% set hardDisabled = 0 %}
+            {% if outOfStock is same as (true) %}
+                {% set cssClass = 'btn--disabled ' %}
+                {% set hardDisabled = 1 %}
+            {% endif %}
+
+            {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ 'in-add-to-cart__button btn-no-style', disabled: outOfStock, 'data-hard-disabled': hardDisabled }}) }}
+        </div>
+    {% endif %}
     {{ form_end(form) }}
 {% endif %}
