design: change text

--- a/templates/Front/Content/Benefits/list.html.twig
+++ b/templates/Front/Content/Benefits/list.html.twig
@@ -12,8 +12,7 @@
             {% include 'Front/Svg/delivery.svg' %}
         </span>
         <span class="list-benefits__item__text">
-            {{ 'Doprava zdarma pro členy'|trans }}
-            <a class="list-benefits__item__text__link js-not-implemented-yet" href="#">{{ 'tropic klubu'|trans }}</a>
+            {{ 'Doprava při nákupu nad 1000 Kč zdarma'|trans }}
         </span>
     </li>
     <li class="list-benefits__item">
