--- a/templates/Front/Inline/Product/extendedWarrantySticker.html.twig
+++ b/templates/Front/Inline/Product/extendedWarrantySticker.html.twig
@@ -1,3 +1,3 @@
 <img alt="{{ 'Nálepka Prodloužená záruka'|trans }}" title="{{ 'Prodloužená záruka'|trans }}"
-     src="{{ asset('public/frontend/images/extended-warranty.svg') }}" loading="lazy"
-     data-src="{{ asset('public/frontend/images/extended-warranty.svg') }}" class="image-product" itemprop="image">
+     src="{{ asset('public/frontend/images/extended-warranty.png') }}" loading="lazy"
+     data-src="{{ asset('public/frontend/images/extended-warranty.png') }}" class="image-product" itemprop="image">
