--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -4,6 +4,7 @@
     {% import 'Front/Content/Product/productListMacro.html.twig' as productList %}
     {% import 'Front/Content/Product/productGalleryImagesMacro.html.twig' as productImages %}
     {% import 'Front/Inline/Common/discountExclusionNoticeMacro.html.twig' as discountExclusion %}
+    {% import 'Front/Inline/Product/productStickersMacro.html.twig' as stickersMacro %}
 
     {% set domain = getDomain() %}
     {% set showGalleryMaxCount = 3 %}
@@ -12,6 +13,7 @@
     {% set typeSupplierSet = product.supplierSet is same as(true) %}
     {% set typeSetOrSupplierSet = typeSet or typeSupplierSet %}
     {% set variantsCount = product.getVariantsCount(domain.id) %}
+    {% set stickers = getImages(product, 'sticker') %}
 
     <div class="box-detail">
         <div class="web__line">
@@ -31,23 +33,12 @@
                                         <a href="{{ imageUrl(product, 'original') }}"
                                         class="{{ showGallery ? 'js-gallery-main-image' : 'js-popup-image' }}">
                                             {{ image(product, { itemprop: 'image' }) }}
-
-                                            {% set stickers = getImages(product, 'sticker') %}
-                                            {% if stickers|length > 0 or product.warranty > 24 %}
-                                                <div class="box-detail__image__stickers">
-                                                    {% for sticker in stickers %}
-                                                        {{ image(sticker) }}
-                                                    {% endfor %}
-                                                    {% if product.warranty > 24 %}
-                                                        {% include 'Front/Inline/Product/extendedWarrantySticker.html.twig' %}
-                                                    {% endif %}
-                                                </div>
-                                            {% endif %}
-
                                         </a>
                                     {% else %}
                                         {{ noimage({ alt: product.name }) }}
                                     {% endif %}
+
+                                    {{ stickersMacro.list(product, stickers, 'box-detail__image__stickers') }}
                                 </div>
 
                                 {{ productFlags.list(getProductFlagsWithFreeTransportAndPaymentFlag(sellingPrice, product, showFlagsMaxCount), 'in-flag--detail', false, sellingPrice, variantsCount) }}
@@ -75,29 +66,28 @@
                             </div>
                         {% else %}
                             <div class="box-detail__description">
-                                {% if typeSetOrSupplierSet %}
-                                    <div class="box-detail__description__wrap">
-                                        <h2 class="box-detail__description__title" itemprop="name">
-                                            {{ product.getSeoH1(domain.id)|default(product.name) }}
-                                        </h2>
-                                        <div class="box-detail__description__flags">
-                                            {{ productFlags.list(getProductFlagsWithFreeTransportAndPaymentFlag(sellingPrice, product, showFlagsMaxCount), 'in-flag--detail in-flag--in-set', false, sellingPrice, variantsCount) }}
-                                        </div>
+                                <div class="box-detail__description__wrap">
+                                    <h2 class="box-detail__description__title" itemprop="name">
+                                        {{ product.getSeoH1(domain.id)|default(product.name) }}
+                                    </h2>
+                                    <div class="box-detail__description__flags">
+                                        {{ productFlags.list(getProductFlagsWithFreeTransportAndPaymentFlag(sellingPrice, product, showFlagsMaxCount), 'in-flag--detail in-flag--in-set', false, sellingPrice, variantsCount) }}
                                     </div>
+                                    {{ stickersMacro.list(product, stickers, 'box-detail__image__stickers') }}
+                                </div>
 
-                                    <p class="box-detail__description__code">
-                                        {{ product.catnum }}
-                                    </p>
-                                    <p class="box-detail__description__subtitle">{{ product.getShortDescription(domain.id) }}</p>
+                                <p class="box-detail__description__code">
+                                    {{ product.catnum }}
+                                </p>
+                                <p class="box-detail__description__subtitle">{{ product.getShortDescription(domain.id) }}</p>
 
-                                    <div class="box-gallery">
-                                        {% set galleryImages = getProductSetImages(product) %}
-                                        {% set showGallery = galleryImages|length > 0 %}
-                                        {% if showGallery %}
-                                            {{ productImages.loadGalleryImages(product, galleryImages, showGalleryMaxCount, youtubeDetails, typeSetOrSupplierSet) }}
-                                        {% endif %}
-                                    </div>
-                                {% endif %}
+                                <div class="box-gallery">
+                                    {% set galleryImages = getProductSetImages(product) %}
+                                    {% set showGallery = galleryImages|length > 0 %}
+                                    {% if showGallery %}
+                                        {{ productImages.loadGalleryImages(product, galleryImages, showGalleryMaxCount, youtubeDetails, typeSetOrSupplierSet) }}
+                                    {% endif %}
+                                </div>
                             </div>
                         {% endif %}
                     </div>
@@ -211,6 +201,16 @@
                         {% if not product.isMainVariant %}
                             {{ include('/Front/Content/WatchDog/watchDogLink.html.twig', {product: product}) }}
                         {% endif %}
+
+                        {% if product.recommended and product.warranty > 24 %}
+                            {% include 'Front/Inline/Product/extendedWarrantySticker.html.twig' %}
+                        {% endif %}
+
+                        {% for sticker in stickers %}
+                            {% if not loop.first or product.recommended or product.warranty > 24 %}
+                                {{ image(sticker) }}
+                            {% endif %}
+                        {% endfor %}
 
                         {% if product.isMainVariant %}
                             <div class="wrap-gradient wrap-gradient--with-gap">
