admin: flags: it is not possible to set "sale" and "news" type anymore
- the special flags are recognized by their pohodaId from now on
- flags grid: remove "sale" and "news" columns

--- a/templates/bundles/ShopsysFrameworkBundle/Admin/Content/Flag/listGrid.html.twig
+++ b/templates/bundles/ShopsysFrameworkBundle/Admin/Content/Flag/listGrid.html.twig
@@ -1,7 +1,7 @@
 {% extends '@!ShopsysFramework/Admin/Grid/Grid.html.twig' %}
 
 {% block grid_action_cell_type_delete %}
-    {% if row.a.sale is same as (true) %}
+    {% if row.a.pohodaId is same as(saleFlagPohodaId) %}
         <span title="{{ 'Tento příznak nemůže být smazán, protože je automaticky přiřazován produktům se zásobami na výprodejových skladech.'|trans }}"
               class="js-tooltip cursor-help in-icon in-icon--info" data-toggle="tooltip" data-placement="bottom"
         >
