design: edit format of box preview

--- a/assets/styles/frontend/common/components/box/preview.less
+++ b/assets/styles/frontend/common/components/box/preview.less
@@ -45,6 +45,15 @@
             background-color: @color-f;
             border-radius: @radius - 2px;
         }
+
+        &__title {
+            margin: 20px 0 10px;
+            line-height: 20px;
+
+            font-size: 16px;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
     }
 
     &__action {
