design: edit font of links

--- a/assets/styles/frontend/common/components/box/contact.less
+++ b/assets/styles/frontend/common/components/box/contact.less
@@ -125,6 +125,8 @@
             &__text {
                 width: calc(~"100% - @{box-contact-info-link-icon-width}");
                 padding-left: 10px;
+
+                font-weight: 700;
             }
         }
 
