--- a/templates/Front/Content/AboutUs/info.html.twig
+++ b/templates/Front/Content/AboutUs/info.html.twig
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                         <div class="box-contact__store__row">
-                            <div class="box-contact__store__row__left js-not-implemented-yet">
+                            <div class="box-contact__store__row__left">
                                 <strong>{{ 'Otevírací doba'|trans }}<br></strong>
                                 {{ infoOpeningHours|raw }}<br>
                             </div>
