design: vertical centered content of item

--- a/templates/Front/Content/Product/bestsellingProductsListVertical.html.twig
+++ b/templates/Front/Content/Product/bestsellingProductsListVertical.html.twig
@@ -35,7 +35,7 @@
                                         </div>
                                     {% endif %}
 
-                                    <div class="in-availability">
+                                    <div class="in-availability in-availability--without-gap">
                                         <div class="in-availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
                                             {% include 'Front/Content/Product/productViewAvailability.html.twig' %}
                                         </div>
