--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -72,6 +72,7 @@
 @import "components/in/overlay.less";
 @import "components/in/paging.less";
 @import "components/in/place.less";
+@import "components/in/rating.less";
 @import "components/in/scroll.less";
 @import "components/in/tab.less";
 @import "components/in/title.less";
@@ -170,6 +171,7 @@
 @import "components/box/promo-code.less";
 @import "components/box/promo-image.less";
 @import "components/box/reasons-to-buy.less";
+@import "components/box/reviews.less";
 @import "components/box/scroll.less";
 @import "components/box/set.less";
 @import "components/box/search.less";
