--- a/templates/Front/Content/Heureka/reviews.html.twig
+++ b/templates/Front/Content/Heureka/reviews.html.twig
@@ -1,20 +1,53 @@
 <div class="box-reviews">
-    <h3 class="box-reviews__title">
-        {{ 'Hodnocení našich zákazníků'|trans }}
-        <a href="https://obchody.heureka.cz/tropicliberec-cz/recenze/">
+    <div class="box-reviews__top">
+        <h3 class="box-reviews__title">
+            {{ 'Hodnocení našich zákazníků'|trans }}
+        </h3>
+        <a class="box-reviews__subtitle" href="https://obchody.heureka.cz/tropicliberec-cz/recenze/">
             {{ 'Další hodnocení zákazníků'|trans }}
         </a>
-    </h3>
+    </div>
     <div class="box-reviews__heureka">
         {% for review in reviews %}
             {% set ratingValue = (review.totalRating / 0.5) * 10 %}
             <div class="box-reviews__heureka__item">
                 <div class="box-reviews__heureka__rating">
-                    <div class="box-reviews__heureka__rating__value">
-                        {{ ratingValue }}%
-                    {% for star in range(1, review.totalRating|round) %}
-                        <i class="svg svg-star"></i>
-                    {% endfor %}
+                    <p class="box-reviews__heureka__rating__value">{{ ratingValue }}%</p>
+                    <div class="in-rating">
+                        <ul class="in-rating__list in-rating__list--full">
+                            <li class="in-rating__list__item">
+                                <i class="svg svg-star"></i>
+                            </li>
+                            <li class="in-rating__list__item">
+                                <i class="svg svg-star"></i>
+                            </li>
+                            <li class="in-rating__list__item">
+                                <i class="svg svg-star"></i>
+                            </li>
+                            <li class="in-rating__list__item">
+                                <i class="svg svg-star"></i>
+                            </li>
+                            <li class="in-rating__list__item">
+                                <i class="svg svg-star"></i>
+                            </li>
+                        </ul>
+                        <ul class="in-rating__list in-rating__list--value" style="width: {{ ratingValue }}%">
+                            <li class="in-rating__list__item">
+                                <i class="svg svg-star"></i>
+                            </li>
+                            <li class="in-rating__list__item">
+                                <i class="svg svg-star"></i>
+                            </li>
+                            <li class="in-rating__list__item">
+                                <i class="svg svg-star"></i>
+                            </li>
+                            <li class="in-rating__list__item">
+                                <i class="svg svg-star"></i>
+                            </li>
+                            <li class="in-rating__list__item">
+                                <i class="svg svg-star"></i>
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="box-reviews__heureka__content">
