--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -110,6 +110,7 @@
 @import "components/list/products-line.less";
 @import "components/list/products-slider.less";
 @import "components/list/products-set.less";
+@import "components/list/pros-cons.less";
 @import "components/list/reasons-to-buy.less";
 @import "components/list/simple.less";
 @import "components/list/set.less";
