--- a/templates/Front/Content/Order/notPaid.html.twig
+++ b/templates/Front/Content/Order/notPaid.html.twig
@@ -1,5 +1,9 @@
 {% extends 'Front/Layout/layoutWithoutPanel.html.twig' %}
 
+{% block meta_robots -%}
+    <meta name="robots" content="noindex, follow">
+{% endblock %}
+
 {% block title %}
     {{ 'Order could not be paid'|trans }}
 {% endblock %}
