--- a/templates/Front/Content/PersonalData/detail.html.twig
+++ b/templates/Front/Content/PersonalData/detail.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block meta_robots -%}
-    <meta name="robots" content="noindex">
+    <meta name="robots" content="noindex, follow">
 {% endblock %}
 
 {% block main_content %}
