--- a/templates/Front/Content/Product/search.html.twig
+++ b/templates/Front/Content/Product/search.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block meta_robots %}
-    {{ paginator.metaRobots(paginationResultProducts) }}
+    <meta name="robots" content="noindex, follow">
 {% endblock %}
 
 {% block main_content %}
